syntax = "proto3";

package payment;

option go_package = "github.com/maksroxx/DeliveryService/proto/payment;paymentpb";

service PaymentService {
  rpc ConfirmPayment(ConfirmPaymentRequest) returns (ConfirmPaymentResponse);
}

message ConfirmPaymentRequest {
  string user_id = 1;
  string package_id = 2;
}

message ConfirmPaymentResponse {
  string message = 1;
}